--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <script src="js/index.js"></script>
     <script src="js/store-data.js"></script>
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtkfObMsSupEeX-BgJ3iizW_L_Q0BeZI4&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=API_KEY&callback=initMap">
     </script>
     </body>
 </html>
